# franken_ocr

./: .gitattributes  .gitignore  .rchignore  .skill-loop-progress.md  .ubsignore  AGENTS.md  CHANGELOG.md  COMPREHENSIVE_PLAN_FOR_FRANKEN_OCR.md  Cargo.toml  LICENSE  README.md  install.ps1  install.sh  rust-toolchain.toml
.beads/: issues.jsonl
.beads/.br_history/: issues.20260629_140602.jsonl  issues.20260630_182442.jsonl  issues.20260630_192520.jsonl  issues.20260630_193138.jsonl  issues.20260630_194249.jsonl  issues.20260705_232302.jsonl
.claude/skills/focr/: SKILL.md
.github/workflows/: ci.yml  dist.yml  model-parity.yml  performance-gauntlet.yml
artifacts/perf/bd-1azu.14/: CONTROL_CORRECTION.md  SHA256SUMS
artifacts/perf/bd-1azu.36/: SHA256SUMS
artifacts/perf/bd-1e9n/: SHA256SUMS  page_0107_gundam.txt  validation_summary.txt
artifacts/perf/bd-1waa/: README.md  SHA256SUMS  cer_gate_20pg_m4.txt  gemmqkv_perpage_cer.txt  page_0590_qkv_identical_to_base.txt  page_0590_runaway_tail.txt  page_0590_sizes.txt  perf_sweep_m4_page0023.txt  perf_sweep_trj_x86_page0023.txt  trj_x86_cpu.txt
artifacts/perf/bd-2dlz/: README.md  SHA256SUMS  perf_after_page0107.txt  perf_before_page0107.txt
artifacts/perf/bd-2mo.24/: sha256.manifest
artifacts/perf/bd-2mo.26/: arch.json  roofline_page_0009.json  roofline_page_0014.json
artifacts/perf/bd-2mo.5.1/: README.md  SHA256SUMS  igemm_quiet_scalar.txt  igemm_quiet_sdot.txt  igemm_quiet_smmla.txt
artifacts/perf/bd-2sez/: ref_tromr.json
artifacts/perf/bd-3bom/: README.md  SHA256SUMS  perf_after_page0107.txt  perf_before_page0107.txt
artifacts/perf/bd-3n16/: README.md  SHA256SUMS  after_sam_attention_probe.txt  baseline_sam_attention_probe.txt  gemm_attempt_7run.txt  gemm_baseline_7run.txt  qkv_grid_hoist_attempt_7run.txt  qkv_grid_hoist_baseline_7run.txt
artifacts/perf/bd-attn-serial/: README.md  SHA256SUMS  attn_serial.perf  int8_baseline.perf
artifacts/perf/bd-av64.10-g2r/: SHA256SUMS
artifacts/perf/bd-av64.10-rowtile/: README.md  SHA256SUMS
benches/: gauntlet_harness.rs  igemm_tier.rs  int4_packed_tier.rs  nn_facade.rs
benches/support/: perf_harness.rs
docs/: DISCREPANCIES.md  FEATURE_PARITY.md  NEGATIVE_EVIDENCE.md  PERF_LEDGER.md  PROPOSED_ARCHITECTURE.md  VISION_PARITY_RESULTS.md  focrq-format.md
docs/alien/: AF-1-rate-distortion-bit-allocation.md  AF-2-tail-risk-cvar-evt.md  AF-3-conformal-early-exit.md  AF-4-submodular-selection.md  AF-5-usl-pool-sizing.md
docs/conformance/: GOLDEN.md  LADDER_HARNESS.md  METAMORPHIC.md  PARITY_LADDER.md  RATCHET.md
docs/gauntlet/: BENCH_HARNESS.md  CONFORMANCE_HYPOTHESIS_LEDGER.md  EPROCESS_STATE.json  GAUNTLET_EXPERIMENT_DESIGNS.md  METHODOLOGY.md  PARITY_RUNBOOK.md  PERF_HYPOTHESIS_LEDGER.md  RELEASE_CERTIFICATION_TEMPLATE.md  RELEASE_READINESS.json  RELEASE_SCORECARD.json  ROUNDS.jsonl  SURFACE_PARITY_HYPOTHESIS_LEDGER.md
docs/testing/: LOGGING_AND_E2E.md
docs/truth-pack/: CENSUS.md  EXISTING_UNLIMITED_OCR_STRUCTURE.md  OQ_INDEX.md  PINNED_SOURCES.md  SOURCE_HASHES.md
docs/zoo/: got-ocr2-spec.md  smolvlm2-spec.md  tromr-spec.md
examples/: decoder_dump.rs  e2e_ocr.rs  full_vision_dump.rs  preprocess_dump.rs  vision_dump.rs
fuzz/: .gitignore  Cargo.toml
fuzz/corpus/pretok_split/: ascii.txt  cjk.txt  emoji_ws.txt
fuzz/fuzz_targets/: fuzz_target_1.rs  image_decode.rs  pretok_split.rs  safetensors_parse.rs
models/: UPLOAD_RUNBOOK.md  manifest-v2.json  manifest.json
scripts/: af1_bit_allocator.py  af2_tail_risk.py  af5_usl_fit.py  bench_guardrail.py  check.sh  check_fixture_manifest.py  check_focrq_format.py  check_ledgers.py  check_oracle_provenance.py  check_release_linkage.py  fetch_model.sh  fetch_sources.sh  gauntlet_cert.py  gauntlet_focr.sh  gauntlet_ref_unlimited.py  gauntlet_ref_zoo.py  gauntlet_reference.py  gauntlet_roofline.py  gauntlet_row.py  gauntlet_runbook.sh  gauntlet_timing.py  gen_moe_torch_2_10_cpu_fixture.py  gen_pil_bicubic_goldens.py  gen_reference_fixtures.py  gen_reference_fixtures_onechart.py  gen_reference_fixtures_smolvlm2.py  gen_reference_fixtures_smolvlm2_vision.py  gen_reference_fixtures_tromr.py  gen_smolvlm2_token_id_fixtures.py  gen_smolvlm2_vqa_fixtures.py  gen_token_id_fixtures.py  gen_tromr_safetensors.py  ladder_scorecard.sh  onechart_chart_e2e.sh  oracle_bridge.py  oracle_nondeterminism_floor.py  realscan_music_gate.sh  smolvlm2_convert_e2e.sh  smolvlm2_describe_e2e.sh  spec_gate_e2e.sh  (+2 more)
scripts/baseline/: compare_ocr.py  dump_stage_activations.py  run_baidu_reference.py  run_baidu_reference_multi.py  run_franken.sh
src/: cli.rs  conformance.rs  dist.rs  doctor.rs  error.rs  lib.rs  main.rs  pdf.rs  progress.rs  robot.rs  storage.rs
src/adaptive/: conformal.rs
src/native_engine/: batch_scheduler.rs  connector.rs  decoder.rs  decoder_qwen2.rs  got.rs  mod.rs  model_arch.rs  moe.rs  nn.rs  onechart.rs  postprocess.rs  rswa.rs  sampler.rs  smolvlm2.rs  tensor.rs  token_compress.rs  tromr.rs  unlimited_ocr_census.rs  unlimited_ocr_manifest.json  vision_bridge.rs  vision_clip.rs  vision_sam.rs  vision_siglip.rs  weights.rs
src/preprocess/: mod.rs  pil_resample.rs  staff_detect.rs
src/quant/: bit_allocator.rs  convert.rs  focrq.rs  int4.rs  int8.rs  mod.rs  recipe.rs
src/simd/: arm.rs  dispatch.rs  int4.rs  mod.rs  pack.rs  x86.rs
src/tokenizer/: mod.rs  music.rs  ops.rs  pretok.rs
tests/: agent_ergonomics_regression.rs  batched_attention_parity.rs  batched_decode_bit_identity.rs  batched_forward_parity.rs  batched_igemm_parity.rs  batched_moe_parity.rs  cancel_and_panic_faults.rs  cli_robot_golden.rs  conformance_matrix.rs  e2e_recognize.rs  fault_suite.rs  installer_e2e.sh  int32_overflow_proof.rs  int4_packed_parity.rs  lmhead_shard_parity.rs  many_pages_without_deadlock.rs  metamorphic.rs  parity_ladder.rs  progress_stderr_discipline.rs  property_suite.rs  spec_decode_gate.rs  spec_ring_rollback.rs  spec_verify_forward_parity.rs
tests/fixtures/: MANIFEST.toml  PROVENANCE.md  moe_torch_2_10_cpu.json  robot_schema_v1.json
tests/support/: parity_harness.rs  proptest_support.rs
(+575 files in other folders)
