[package]
name = "franken_ocr"
version = "0.0.0"
edition = "2024"
license = "MIT"
description = "Pure-Rust, CPU-hyper-optimized runner for the Baidu Unlimited-OCR model (single-binary CLI: focr)"
readme = "README.md"

# Two binaries from one entrypoint: the long name + the short `focr` alias that
# agents and humans actually type. Listing them explicitly disables the implicit
# package-named bin, so both are declared here.
[[bin]]
name = "franken_ocr"
path = "src/main.rs"

[[bin]]
name = "focr"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"

# ── Phase 1+ dependencies (wired as the engine lands; see COMPREHENSIVE_PLAN_FOR_FRANKEN_OCR.md §4.1, bead p0). ──
# Kept commented so the Phase-0 skeleton builds with a minimal surface and a fast,
# reliable `cargo check`. Uncomment per the roadmap — these are the REAL intended deps,
# mirroring the proven franken_whisper wiring.
#
# asupersync         = { version = ">=0.3.5, <0.4", default-features = false }  # engine-owns-runtime (plan §3.3); local /dp/asupersync = 0.3.5
# ft-kernel-cpu      = { path = "../frankentorch/crates/ft-kernel-cpu" }   # int8 dot (SDOT/VNNI), GEMM, conv2d, sdpa, rmsnorm...
# ft-core            = { path = "../frankentorch/crates/ft-core" }         # TensorMeta / DType / Device / Float16
# ft-serialize       = { path = "../frankentorch/crates/ft-serialize" }    # safetensors BF16 load (the converter, Phase 2)
# half               = { version = "2", features = ["std"] }               # f16/bf16 storage types
# fsqlite            = { path = "../frankensqlite/crates/fsqlite" }         # run state + telemetry (NEVER rusqlite)
# fsqlite-types      = { path = "../frankensqlite/crates/fsqlite-types" }
# image              = "0.25"                                              # image decode/resize/normalize (preprocess front end)
# ctrlc              = "3.4"                                               # ShutdownController (sync main, plan §3.3)
# tracing            = "0.1"
# tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
# uuid               = { version = "1", features = ["serde", "v4"] }
# sha2               = "0.10"                                              # .focrq provenance + model version tag

[lints.rust]
unsafe_code = "deny"

# Profiling build: full optimization + symbols/frame pointers so samplers
# (samply/Instruments) can attribute frames. NEVER profile the size-optimized
# `release` profile (strip=true → useless flamegraphs). See plan §9.1.
[profile.release-perf]
inherits = "release"
opt-level = 3
lto = "thin"
codegen-units = 1
debug = "line-tables-only"
strip = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
