[package]
name = "franken_ocr"
version = "0.0.0"
edition = "2024"
license = "MIT"
description = "Pure-Rust, CPU-hyper-optimized runner for the Baidu Unlimited-OCR model (single-binary CLI: focr)"
readme = "README.md"

# Two binaries from one ENTRYPOINT (the shared `franken_ocr::cli_main` in the
# lib), but each from its OWN thin shim file so no source is shared across build
# targets (a file in two `[[bin]]` paths trips a cargo "present in multiple build
# targets" warning). The long name builds from `src/main.rs`; the short `focr`
# alias — the name agents and humans actually type — builds from
# `src/bin/focr.rs`. Both are one-line shims that just call `cli_main()`.
# Declaring them explicitly also disables the implicit package-named bin.
[[bin]]
name = "franken_ocr"
path = "src/main.rs"

[[bin]]
name = "focr"
path = "src/bin/focr.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"

# ── Phase 1+ engine substrate (bd-223.1 + engine wiring). ──
# These mirror the PROVEN franken_whisper dep block (they are PROVEN to compile
# together there). See PROPOSED_ARCHITECTURE.md §2/§5 and the truth-pack spec.
#
# asupersync: orchestration/cancellation/IO only — the engine owns exactly one
# Runtime below the sync public API (plan §3.3). default-features=false keeps the
# surface minimal. Local /dp/asupersync = 0.3.5 satisfies ">=0.3.5,<0.4".
asupersync = { version = ">=0.3.5, <0.4", default-features = false }
# FrankenTorch compute kernels for the in-process native OCR engine: int8 dynamic
# linear (SDOT/VNNI), GEMM/sgemm, conv2d (im2col), sdpa, rms_norm, layer_norm.
ft-kernel-cpu = { path = "../frankentorch/crates/ft-kernel-cpu" }
# TensorMeta / DType / Device / Float16 — the meta types the kernel entrypoints take.
ft-core = { path = "../frankentorch/crates/ft-core" }
# Direct dep on `half` (the same crate ft-core re-exports as `Float16`) for its
# SIMD bulk f16->f32 dequant; `std` enables the runtime aarch64 fp16 / x86 f16c
# vector paths. Pinned to ft-core's major version.
half = { version = "2", features = ["std"] }
# Durable run state + telemetry on frankensqlite — NEVER rusqlite (plan §10).
fsqlite = { path = "../frankensqlite/crates/fsqlite" }
fsqlite-types = { path = "../frankensqlite/crates/fsqlite-types" }
# Image decode/resize/normalize/pad/tile — the preprocess front end (plan §6.2).
image = "0.25"

# Currently-unwired opt-in: declaring the feature makes `#[cfg(feature =
# "mimalloc")]` in benches/support/perf_harness.rs a KNOWN cfg (no unexpected-cfg
# warning). Empty on purpose — no dependency is pulled in until the allocator is
# actually wired behind `--features mimalloc`.
[features]
mimalloc = []

[dev-dependencies]
sha2 = "0.10"

# The `>=0.3.5,<0.4` asupersync the engine needs is not yet on crates.io (the
# index tops out at 0.3.4); it lives as the local sibling crate `/dp/asupersync`
# (version 0.3.5). Patch crates-io to that path so the whole dependency graph —
# franken_ocr's direct dep AND the fsqlite/frankentorch path-deps that pin
# `0.3.4` — unifies on the single local 0.3.5 (which satisfies both ^0.3.4 and
# >=0.3.5,<0.4). One asupersync in the tree; no version skew.
#
# The path is spelled `/dp/asupersync` (not the `../asupersync` symlink) to match
# fsqlite's direct path-dep spelling byte-for-byte. `[patch.crates-io]` only
# rewrites the crates.io deps; fsqlite path-deps `/dp/asupersync` directly, so the
# patch must use the IDENTICAL string or cargo records two distinct packages
# (`.../projects/asupersync` vs `/dp/asupersync`) and aborts re-resolution with a
# "package collision in the lockfile" error even though both symlink to one dir.
[patch.crates-io]
asupersync = { path = "/dp/asupersync" }

[lints.rust]
unsafe_code = "deny"

# Profiling build: full optimization + symbols/frame pointers so samplers
# (samply/Instruments) can attribute frames. NEVER profile the size-optimized
# `release` profile (strip=true → useless flamegraphs). See plan §9.1.
[profile.release-perf]
inherits = "release"
opt-level = 3
lto = "thin"
codegen-units = 1
debug = "line-tables-only"
strip = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
